Bug 436242 - Command "/bin/sh" fails "Could not find an interactive shell to start."
Summary: Command "/bin/sh" fails "Could not find an interactive shell to start."
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.04.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 436632 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-04-26 21:00 UTC by pankracypl
Modified: 2021-06-04 12:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pankracypl 2021-04-26 21:00:33 UTC
SUMMARY
Updated KDE Neon User Edition:
After Konsole update to 21.04.0 .desktop files with Terminal=true cannot run properly /bin/sh commands. Konsole is displaying  "Warning: Could not find an interactive shell to start." and nothing else.

STEPS TO REPRODUCE
1. Download neon-unstable-20210425-0329.iso and run it live.
2. On desktop create Link to application.. with application command: sh -c "whatever" or /bin/sh -c "whatever" and advanced option run in terminal.
3. Double click this shortcut to execute and see results.

"neon-user-20210422-0944.iso" is not affected yet (update is waiting in discover), so you can compare results.

OBSERVED RESULT
"Warning: Could not find an interactive shell to start."

EXPECTED RESULT
The same like with /bin/dash command.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 5.21 User Edition 
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Only sh is affected. Commands like bash and dash are working.
Comment 1 pankracypl 2021-04-26 22:07:53 UTC
yep downgrade to version 4:20.12.3-0xneon+20.04+focal+build14 fixes the problem.
Comment 2 Graham Perrin 2021-05-25 22:06:09 UTC
Also <https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=256151>

> … x11/konsole profile set to /bin/sh: 
> Warning: Could not find an interactive shell to start.
Comment 3 Kurt Hindenburg 2021-05-25 22:15:15 UTC
This has nothing to do w/ desktop files.  Setting Program to "/bin/sh" fails; "sh" works.  On my system /bin/sh -> dash
Comment 5 Graham Perrin 2021-05-26 06:05:01 UTC
Thanks. 

(In reply to Kurt Hindenburg from comment #4)

Is bug 436632 a duplicate?
Comment 6 Kurt Hindenburg 2021-06-01 17:04:26 UTC
*** Bug 436632 has been marked as a duplicate of this bug. ***
Comment 7 Kurt Hindenburg 2021-06-03 17:08:31 UTC
Git commit 34ad14c8cee4ab352481bf2ba190df9f8b744d29 by Kurt Hindenburg.
Committed on 03/06/2021 at 17:03.
Pushed by hindenburg into branch 'release/21.04'.

Allow /bin/sh as a profile command

This patch committed in master adds new strings.   Adriaan and I
basically came up with the same patch.
This error was a result of fa398f564875455ee9374bb2c68a8137d3a938f9
which had a logic error in it.
FIXED-IN: 21.04.2

M  +6    -4    src/session/Session.cpp

https://invent.kde.org/utilities/konsole/commit/34ad14c8cee4ab352481bf2ba190df9f8b744d29