Allow /bin/sh as a profile command

This patch committed in master adds new strings.   Adriaan and I
basically came up with the same patch.
This error was a result of fa398f564875455ee9374bb2c68a8137d3a938f9
which had a logic error in it.

BUG: 436242
FIXED-IN: 21.04.2